--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,39 @@
 body {
-  background pink;
+  background: pink;
 }
 
-h1 {
+/*h1 {
   color: blue;
   fontsize: 3em; 
-}
+}*/
 
-h2 {
+/*h2 {
   color: green;
   font-weight: normal
   font-style: italic;
-}
+}*/
 
-.completed {
+/*.completed {
   font-family: 12px;
+}*/
+.completed {
+  font-size: 12px; 
 }
-
-#tasks .completed {
+/*#tasks .completed {
   backgound: #ccc;
   text-decoration: underline;
+}*/
+
+h1 {
+color : blue;
+font-size: 3em
+}
+h2 {
+color : green;
+font-weight : normal;
+font-style : italic;
+}
+#tasks .completed {
+text-decoration : underline;
+background: #ccc;
 }
